--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ code {
   display: inline-table;
   text-align: center;
   flex-direction: column;
-  height:7vh;
+  height:70px;
   justify-content:center;
   margin-bottom:10vh;
   width: 100%; 
