--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,8 @@ code {
   align-items: center;
   background-color: #1D2228; 
   color: #E1E2E2;
-  display: flex;
+  display: grid;
+  grid-row: 50px;
   text-align: center;
   flex-direction: column;
   height:70px;
