--- a/src/components/maintenance-page/MaintenancePage.css
+++ b/src/components/maintenance-page/MaintenancePage.css
@@ -1,12 +1,42 @@
-.Product {
+table {
     border-width: 1px;
     border-color: #1d2228;
-    border-style:inset;
+    border-style: solid;
+    border-collapse: collapse;
+    width: 80vw;
+    height: 40vh;
+    align-self: auto;
+    
 }
 
-th{
+thead, th {
 background-color: #fb8122;
-border-width: 2px;
-border-color: #1d2228;
-border-style: solid;
+}
+
+th, td {
+    width: 4.4vw;
+    height: 5vw;
+    min-width: 120px;
+    max-height: 60px;
+    overflow-wrap: break-word;
+    border-style: solid;
+}
+
+td {
+    border-style: solid;
+    border-width: 1px;
+    border-collapse: collapse;
+    
+}  
+
+tbody {
+    width: 80vw;
+    height: 40vh;
+    overflow: scroll;
+    }
+
+.ProductTable{
+    max-width: 80vw;
+    max-height: 40vw;
+    overflow: scroll;
 }
