--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,7 @@ code {
 position: relative;
 left: 745%;
 bottom: 135%;
+filter:invert(13%) opacity(90%) 
 }
 
 .applogo{
@@ -60,7 +61,9 @@ bottom: 135%;
   position: relative;
   right: 745%;
   bottom: 235%;
-  padding-left: 30px;
+  padding-left: 2px;
+  padding-right: 50px;
+  
 }
 
 #root{
@@ -69,4 +72,12 @@ bottom: 135%;
   justify-content: space-between;
   justify-items: center;
   min-height: 100vh;
+}
+
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
