--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ code {
   align-items: center;
   background-color: #1D2228; 
   color: #E1E2E2;
-  display: grid;
+  display: flexbox;
   grid-row: 50px;
   text-align: center;
   flex-direction: column;
@@ -42,28 +42,41 @@ code {
 
 .googlebutton{
   /* margin-left: 500%; */
-  max-width: 100%;
+  /* max-width: 100%;
   position: relative;
-  left: 600%;
-  bottom: 70%;
+  left: 580%;
+  bottom: 0%;
+  top: 20%; */
+  position: relative;
+  padding-right: 20px;
+  left: 40%;
+  top: 20%;
 }
 
 .carticon{
-  height: 60px;
+height: 60px;
+/* position: relative;
+left: 695%; */
+/* bottom: 70%; */
 position: relative;
-left: 745%;
-bottom: 135%;
+left: 50%;
+bottom: 60%;
+padding-left: 20px;
 filter:invert(13%) opacity(90%) 
 }
 
 .applogo{
-  height: 60px;
-  position: relative;
-  right: 745%;
-  bottom: 235%;
+  height: 50px;
+  /* position: relative;
+  right: 600%;
+  bottom: 190%;
   padding-left: 2px;
-  padding-right: 50px;
-  
+  padding-right: 50px; */
+  position: relative;
+  right: 50%;
+  padding-left: 50px;
+  bottom: 60%;
+  filter: invert(56%) sepia(85%) saturate(1849%) hue-rotate(345deg) brightness(102%) contrast();
 }
 
 #root{
@@ -74,10 +87,3 @@ filter:invert(13%) opacity(90%)
   min-height: 100vh;
 }
 
-@media screen and (max-width: 500px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
