--- a/src/components/maintenance-page/MaintenancePage.css
+++ b/src/components/maintenance-page/MaintenancePage.css
@@ -5,8 +5,8 @@ table {
     border-collapse: collapse;
     width: 80vw;
     height: 40vh;
-    align-self: auto;
-    
+    margin-left: auto;
+    margin-right: auto;    
 }
 
 thead, th {
@@ -15,33 +15,39 @@ max-width: 80vw;
 max-height: 40vh;
 position: sticky;
 top: 0;
-
+text-align: center;
+white-space: nowrap;
 }
 
-th, td {
+/* th, td {
     width: 4.4vw;
     height: 5vw;
     min-width: 120px;
     max-height: 60px;
-    overflow-wrap: break-word;
-}
+} */
 
 td {
     border-style: solid;
     border-width: 1px;
     border-collapse: collapse;
     text-align: center;
-    
+    white-space: nowrap;
 }  
 
 tbody {
     width: 80vw;
     height: 40vh;
     overflow: scroll;
+    padding: 10vh, 10vw;
     }
 
 .ProductTable{
     max-width: 80vw;
     max-height: 40vw;
     overflow: scroll;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3vw;
+    
 }
