made nav bar stick to top even while scrolling up or down page

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,9 @@ code {
 }
 
 .header {
+  position: sticky;
+  z-index: 100;
+  top: 0;
   align-items: center;
   background-color: #1D2228; 
   color: #E1E2E2;
