--- a/src/components/form/FormItem.module.css
+++ b/src/components/form/FormItem.module.css
@@ -10,3 +10,13 @@
   color: #666666;
   margin-bottom: .5em;
 }
+
+.calendar {
+  margin-top: .5em;
+  width: 100%;
+  box-sizing: border-box;
+  background: white;
+}
+.calendar > {
+  background: white;
+}
