--- a/src/components/Profile/ProfilePage.css
+++ b/src/components/Profile/ProfilePage.css
@@ -1,11 +1,17 @@
+
+li{
+    margin: 1.5em 0;
+    width: 220px;
+}
 .userInfo{
     margin-bottom: 4em;
     font-size: large;
     flex: 1 1 90%;
     color: #1d2228;
-    height: 6em;
+    height: 10em;
     text-align: left;
 }
+
 .tabs{
     background-color: #1d2228;
     border: 1px solid;
@@ -29,8 +35,7 @@
     margin-left: auto;
     margin-right: auto;
     top: 10.5em;
-    left: 45%;
-    padding: 1px;
+    left: 44.5%;
     width: 15%;
     height: 8em;
 }
@@ -43,9 +48,13 @@ width: 75%;
 }
 
 .headerName{
+    display: block;
+    text-align: center;
+    padding:2px 1.25em 0px;
+    padding-right: 33%;
+    padding-left: 30%;
     position: relative;
-    text-align: justify;
     border-radius: 5px;
     border-bottom: 5px solid #FB8122;
-    width: 50%;
+    width: 30%;
 }
