--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ code {
 }
 
 .header {
-  position: fixed;
+  position: sticky;
   z-index: 100;
   top: 0;
   align-items: center;
@@ -37,7 +37,7 @@ code {
   grid-row: 50px;
   text-align: center;
   flex-direction: column;
-  height:70px;
+  height: 70px;
   justify-content:center;
   margin-bottom:10vh;
   width: 100%; 
@@ -64,7 +64,7 @@ filter:invert(13%) opacity(90%)
   right: 50%;
   padding-left: 50px;
   bottom: 60%;
-  filter: invert(56%) sepia(85%) saturate(1849%) hue-rotate(345deg) brightness(102%) contrast();
+  filter: invert(70%) sepia(85%) saturate(1849%) hue-rotate(345deg) brightness(102%) contrast();
 }
 
 #root{
