--- a/src/components/maintenance-page/MaintenancePage.css
+++ b/src/components/maintenance-page/MaintenancePage.css
@@ -42,6 +42,7 @@ tbody {
     margin-left: auto;
     margin-right: auto;
     margin-top: .70vw;
+    position: relative
     
 }
 .Buttons{
@@ -55,6 +56,6 @@ tbody {
     font-weight: 600px;
     height: 3em;
     justify-self: center;
-    width: 20%;
+    width: 5%;
     position: static;
 }
