--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+a{
+  background-color: black;
+  color: black;
+}
 body {
   margin: 0;
   margin-top: 90px;
@@ -82,6 +86,10 @@ float: right;
   padding-left: 20px;
   bottom: 60%;
   flex-direction: row;
+  background-color: black;
+}
+.profileicon:before{
+  background-color: black;
 }
 #root{
   display:flex;
