changes width of create button

--- a/src/components/maintenance-page/MaintenancePage.css
+++ b/src/components/maintenance-page/MaintenancePage.css
@@ -56,6 +56,6 @@ tbody {
     font-weight: 600px;
     height: 3em;
     justify-self: center;
-    width: 5%;
+    width: 10em;
     position: static;
 }
