--- a/src/components/form/FormItem.module.css
+++ b/src/components/form/FormItem.module.css
@@ -5,8 +5,25 @@
   box-sizing: border-box;
 }
 
+.inputError {
+  margin-top: .5em;
+  width: 100%;
+  padding: .5em;
+  box-sizing: border-box;
+  border: 1px solid red;
+}
+
 .label {
   font-weight: 700;
   color: #666666;
   margin-bottom: .5em;
+}
+
+.paragraph {
+  margin:22px 0px 0px 0px;
+}
+
+.error_item {
+  color:red;
+  margin:3px 0px 0px 0px;
 }
