--- a/src/components/product-page/ProductCardModal.css
+++ b/src/components/product-page/ProductCardModal.css
@@ -3,6 +3,7 @@
     height: 100%;
     width: 100%;
     background-color: rgba(0,0,0,0.4);
+    z-index: 2;
 }
 .productCardModal{
     display: flex;
