--- a/src/components/product-page/ProductPage.module.css
+++ b/src/components/product-page/ProductPage.module.css
@@ -1,14 +1,26 @@
-.app {
+.app, .addLeftMargin{
   display: grid;
   grid-gap: 15px;
   grid-template-columns: repeat(5, auto);
   justify-content: space-evenly;
   margin: 20px;
+  margin-left: 40px;
   overflow-x: auto;
+  transition: margin-left 500ms;
+}
+
+.addLeftMargin{
+  margin-left:185px;
 }
 
 .errMsg {
   color: red;
   font-size: 14px;
   margin: 0px 2px 4px 4px;
+}
+
+.productPageContainer{
+  display:flex;
+  flex-direction: row;
+  flex-wrap:nowrap;
 }
