--- a/src/components/checkout-page/CheckoutPage.module.css
+++ b/src/components/checkout-page/CheckoutPage.module.css
@@ -1,4 +1,5 @@
 .checkoutContainer {
+  margin-top: 100px;
   display:grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-areas:
@@ -7,7 +8,7 @@
     "order    delivery    payNow";
   gap: 1em 2em;
   padding: 0 2em;
-  margin: 2em 0;
+  margin: 100px 0 2em;
   overflow-x: auto;
 }
 
