--- a/src/components/product-page/filter-menu/filterMenu.module.css
+++ b/src/components/product-page/filter-menu/filterMenu.module.css
@@ -8,7 +8,7 @@
     width:155px;
     left:0;
     top: 70px;
-    transition: left 500ms;
+    transition: left 250ms;
 }
 
 .sideCollapsed{
@@ -21,9 +21,10 @@
     box-sizing: border-box;
     color: #E1E2E2;
     font-size:1rem;
-    height:120px;
+    min-height:120px;
     padding:7% 0%;
     width:100%;
+    height: auto;
 }
   
 .fieldset{
@@ -33,6 +34,6 @@
     padding: 2% 8%;
 }
 
-.checkBoxLabel{
+/* .checkBoxLabel{
     padding-left:10%;
-}
+} */
