--- a/src/components/form/FormItem.module.css
+++ b/src/components/form/FormItem.module.css
@@ -12,6 +12,22 @@
   box-sizing: border-box;
   border: 1px solid red;
 }
+.inputErrorTA {
+  margin-top: .5em;
+  width: 530px;
+  height: 30px;
+  padding: .5em;
+  box-sizing: border-box;
+  border: 1px solid red;
+}
+
+.inputTextArea {
+  margin-top: .5em;
+  width: 530px;
+  height: 33.33px;
+  padding: .5em;
+  box-sizing: border-box;
+}
 
 .label {
   font-weight: 700;
@@ -25,9 +41,11 @@
   box-sizing: border-box;
   background: white;
 }
+
 .calendar > {
   background: white;
 }
+
 .paragraph {
   margin:22px 0px 0px 0px;
 }
@@ -36,3 +54,4 @@
   color:red;
   margin:3px 0px 0px 0px;
 }
+
