useState is setup but page still won't give me my modal...will come back to this earlygit add . Everything is already set in place but I just need my modal to appear

--- a/src/components/product-page/ReviewsModal.css
+++ b/src/components/product-page/ReviewsModal.css
@@ -64,20 +64,20 @@
     margin-top: 1em;
 }
 
-.productCardDescription{
+.reviewDescription{
     display:inline-block;
     width: 40%;
     margin-right: auto;
     margin-top: 1em;
 }
-.productCardType{
+.reviewCardType{
     width: 40%;
     display:inline-block;
     margin-right: 0.5em;
     margin-left: auto;
     margin-top: 1em;
 }
-.productCardModal-footer{
+.reviewModal-footer{
     display:flex;
     flex-direction: row;
     flex: 1 1 50px;
