--- a/src/components/product-page/ProductCardModal.css
+++ b/src/components/product-page/ProductCardModal.css
@@ -87,7 +87,7 @@
 .productCardColors{
     display: flex;
     flex-direction: column;
-    align-items: end;
+    align-items: flex-end;
     margin-top: 1em;
     margin-left: auto;
     margin-right:3em;
