--- a/src/components/product-page/ProductPage.module.css
+++ b/src/components/product-page/ProductPage.module.css
@@ -25,3 +25,12 @@
   flex-wrap:nowrap;
   margin-top: 100px;
 }
+
+.pagination{
+position: static;
+top:10px;
+margin-top: 10px;
+margin-left: auto;
+margin-right: auto;
+height: 2em;
+}
