--- a/src/components/Profile/ProfilePage.css
+++ b/src/components/Profile/ProfilePage.css
@@ -60,6 +60,20 @@ width: 150px;
 .purchases{
     width:50%;
     display:flex;
+    height: 3em;
+}
+.purchaseTotal{
+    flex: 1 1 30%;
+}
+.orderDate{
+    flex: 1 1 30%;
+}
+.productsCollapsible{
+    display: flex;
+    flex-direction: column;
+}
+.closed{
+    display: none;
 }
 .productsCollapsible{
     display: flex;
