finally got the desired result...will continue putting the actual mock together to match wireframe

--- a/src/components/product-page/ReviewsModal.css
+++ b/src/components/product-page/ReviewsModal.css
@@ -24,7 +24,7 @@
     margin:10px;
     color: #1d2228;
 }
-.closeButton {
+.reviewscloseButton {
     background-color: transparent;
     position: absolute;
     font-size: 1.5em;
