--- a/src/components/create-promo/PromoForm.module.css
+++ b/src/components/create-promo/PromoForm.module.css
@@ -98,7 +98,7 @@ Input Styling
     text-align: left;
 }
 
-.buttons {
+.submitButton {
     background: #666666;
     border-radius: 20px;
     color: #EEEEEE;
