--- a/src/components/product-page/pagination.css
+++ b/src/components/product-page/pagination.css
@@ -17,6 +17,7 @@
     line-height: 1.43;
     font-size: 13px;
     min-width: 32px;
+    width: 32px;
     background-color: #fb8122;
   }
   .pagination-item.dots:hover {
