--- a/src/components/product-page/pagination.css
+++ b/src/components/product-page/pagination.css
@@ -12,6 +12,7 @@
     display: flex;
     box-sizing: border-box;
     align-items: center;
+    justify-content: center;
     letter-spacing: 0.01071em;
     border-radius: 16px;
     line-height: 1.43;
