--- a/src/components/maintenance-page/MaintenancePage.css
+++ b/src/components/maintenance-page/MaintenancePage.css
@@ -47,6 +47,12 @@ tbody {
 .Buttons{
     margin-left: 2vw;
 }
+.editButton{
+   width: 33px;
+   height: 30px; 
+
+}
+
 .createButton, .promoButton{
     background: #666666;
     border-radius: 20px;
