--- a/src/components/maintenance-page/MaintenancePage.css
+++ b/src/components/maintenance-page/MaintenancePage.css
@@ -47,7 +47,24 @@ tbody {
 .Buttons{
     margin-left: 2vw;
 }
-.editButton{
+.Confirm{
+height: 100%;
+}
+.Cancel{
+height:100%;
+}
+.editbutton{
+width: 100%;
+  border: none;
+    padding: 0;
+    background:none;
+    outline: none;
+}
+.editIcon{
+    border: none;
+    padding: 0;
+    background:none;
+    outline: none;
    width: 33px;
    height: 30px; 
 
