--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,14 @@ float: right;
    filter: invert(20%) sepia(56%) saturate(303%) hue-rotate(1deg) brightness(170%) contrast(90%);
   float: left;
 }
+.pencilIcon{
+  width:20px;
+  height:20px;
+  margin-left: 20px;
+}
+.pencilIcon:hover{
+  color: grey;
+}
 .profileicon{
   height: 60px;
   width: 100px;
